--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.561.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
