feat: Implement SSO middleware and centralized login logic

--- a/.env
+++ b/.env
@@ -9,3 +9,9 @@ GOOGLE_CALLBACK_URL=https://prisma.bibliohispa.es/auth/google/callback
 
 # Opcional (Seguridad API)
 API_SECRET=ojosyculos
+
+
+# --- SEGURIDAD SSO GLOBAL ---
+JWT_SSO_SECRET=una_clave_super_secreta_y_larga
+COOKIE_DOMAIN=.bibliohispa.es
+ENABLE_GLOBAL_SSO=true
